--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Go
 
 on: [push, pull_request]
 
@@ -31,6 +31,14 @@ jobs:
     env:
       CGO_ENABLED: "0"
     steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Go ${{ env.GO_VERSION }}
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
       - name: Build binaries
         run: ./ci-build-all.sh
 
