Add names to upload tasks

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -42,25 +42,29 @@ jobs:
       - name: Build binaries
         run: ./ci-build-all.sh
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload linux/amd64 artifact
+        uses: actions/upload-artifact@v3
         with:
           name: bbctl-linux-amd64
           path: bbctl-linux-amd64
           if-no-files-found: error
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload linux/arm64 artifact
+        uses: actions/upload-artifact@v3
         with:
           name: bbctl-linux-arm64
           path: bbctl-linux-arm64
           if-no-files-found: error
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload macos/amd64 artifact
+        uses: actions/upload-artifact@v3
         with:
           name: bbctl-macos-amd64
           path: bbctl-macos-amd64
           if-no-files-found: error
 
-      - uses: actions/upload-artifact@v3
+      - name: Upload macos/arm64 artifact
+        uses: actions/upload-artifact@v3
         with:
           name: bbctl-macos-arm64
           path: bbctl-macos-arm64
