Add experimental support for generating official bridge configs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
         exclude_types: [markdown]
       - id: end-of-file-fixer
       - id: check-yaml
+        exclude: ^.+\.tpl\.yaml$
       - id: check-added-large-files
 
   - repo: https://github.com/tekwizely/pre-commit-golang
