--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,9 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.yaml]
+indent_style = space
+
+[{.pre-commit-config.yaml,.github/workflows/*.yaml}]
+indent_size = 2
