--- a/bridgeconfig/imessage.tpl.yaml
+++ b/bridgeconfig/imessage.tpl.yaml
@@ -213,6 +213,9 @@ bridge:
     # Send captions in the same message as images using MSC2530?
     # This is currently not supported in most clients.
     caption_in_message: true
+    # Should the bridge explicitly set the avatar and room name for private chat portal rooms?
+    # This is implicitly enabled in encrypted rooms.
+    private_chat_portal_meta: never
 
     # End-to-bridge encryption support options.
     # See https://docs.mau.fi/bridges/general/end-to-bridge-encryption.html
@@ -229,6 +232,23 @@ bridge:
         # Enable key sharing? If enabled, key requests for rooms where users are in will be fulfilled.
         # You must use a client that supports requesting keys from other users to use this feature.
         allow_key_sharing: true
+        # Options for deleting megolm sessions from the bridge.
+        delete_keys:
+            # Beeper-specific: delete outbound sessions when hungryserv confirms
+            # that the user has uploaded the key to key backup.
+            delete_outbound_on_ack: true
+            # Don't store outbound sessions in the inbound table.
+            dont_store_outbound: false
+            # Ratchet megolm sessions forward after decrypting messages.
+            ratchet_on_decrypt: true
+            # Delete fully used keys (index >= max_messages) after decrypting messages.
+            delete_fully_used_on_decrypt: true
+            # Delete previous megolm sessions from same device when receiving a new one.
+            delete_prev_on_new_session: true
+            # Delete megolm sessions received from a device when the device is deleted.
+            delete_on_device_delete: true
+            # Periodically delete megolm sessions when 2x max_age has passed since receiving the session.
+            periodically_delete_expired: true
         # What level of device verification should be required from users?
         #
         # Valid levels:
