--- a/bridgeconfig/imessage.tpl.yaml
+++ b/bridgeconfig/imessage.tpl.yaml
@@ -36,7 +36,7 @@ appservice:
         # The database type. Only "sqlite3-fk-wal" is supported.
         type: sqlite3-fk-wal
         # SQLite database path. A raw file path is supported, but `file:<path>?_txlock=immediate` is recommended.
-        uri: file:mautrix-imessage.db?_txlock=immediate
+        uri: file:{{.DatabasePrefix}}mautrix-imessage.db?_txlock=immediate
 
     # The unique ID of this appservice.
     id: {{ .AppserviceID }}
