--- a/bridgeconfig/whatsapp.tpl.yaml
+++ b/bridgeconfig/whatsapp.tpl.yaml
@@ -43,7 +43,7 @@ appservice:
         #           https://github.com/mattn/go-sqlite3#connection-string
         #   Postgres: Connection string. For example, postgres://user:password@host/database?sslmode=disable
         #             To connect via Unix socket, use something like postgres:///dbname?host=/var/run/postgresql
-        uri: file:mautrix-whatsapp.db?_txlock=immediate
+        uri: file:{{.DatabasePrefix}}mautrix-whatsapp.db?_txlock=immediate
         # Maximum number of connections. Mostly relevant for Postgres.
         max_open_conns: 5
         max_idle_conns: 2
