--- a/bridgeconfig/gmessages.tpl.yaml
+++ b/bridgeconfig/gmessages.tpl.yaml
@@ -250,7 +250,7 @@ bridge:
         prefix: /_matrix/provision
         # Shared secret for authentication. If set to "generate", a random secret will be generated,
         # or if set to "disable", the provisioning API will be disabled.
-        shared_secret: generate
+        shared_secret: {{ .ProvisioningSecret }}
 
     # Permissions for using the bridge.
     # Permitted values:
