--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -4,6 +4,8 @@ on: [push, pull_request]
 
 env:
   GO_VERSION: "1.21"
+  GHCR_REGISTRY: ghcr.io
+  GHCR_REGISTRY_IMAGE: "ghcr.io/${{ github.repository }}"
 
 jobs:
   lint:
@@ -69,3 +71,44 @@ jobs:
           name: bbctl-macos-arm64
           path: bbctl-macos-arm64
           if-no-files-found: error
+
+  build-docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.GHCR_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker Build
+        uses: docker/build-push-action@v4
+        with:
+          cache-from: ${{ env.GHCR_REGISTRY_IMAGE }}:latest
+          pull: true
+          file: Dockerfile
+          tags: ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}
+          push: true
+          build-args: |
+            COMMIT_HASH=${{ github.sha }}
+
+  deploy-docker:
+    runs-on: ubuntu-latest
+    needs:
+      - build-docker
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Login to registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.GHCR_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: beeper/docker-retag-push-latest@main
+        with:
+          image: ${{ env.GHCR_REGISTRY_IMAGE }}
